tests/NormalTests/paczka1/fuzzy1/86631303.err
Error in line 5: 8ucvgjLOI A268 36,3
Error in line 9: 8ucvgjLOI A850 16,6
Error in line 21: m8ge S677 3,7
Error in line 22: uWSPfrec9l A651 67,8
Error in line 11: 8ucvgjLOI A268 90,5
Error in line 26: 8ucvgjLOI A651 26,2
Error in line 30: m8ge S677 88,6
Error in line 28: 8ucvgjLOI A850 77,0
